# bender-bouncer

./: Cargo.toml  README.md  install.sh  uninstall.sh
src/: lib.rs  main.rs
tests/: integration_tests.rs  test_jobs.rs
tests/resources/: 100_frames_step10.blend  1048574frames_2.79.blend  default_2.79.blend  packed.blend
