[package]
name = "bender_bouncer"
version = "0.2.0"
license = "MIT"
readme = "README.md"
authors = ["David Huss <dh@widerstandzwecklos.at>"]
description = "As part of the bender renderfarm, the bouncer is a library used by various services in order to validate blendfiles."
workspace = ".."

[package.metadata.deb]
extended-description = "As part of the bender renderfarm, the bouncer is a library used by various services in order to validate blendfiles."
depends = "$auto"

[dependencies]
docopt = "1"
serde = "1"
serde_derive = "1"
colored = "1.7"
flate2 = "1.0"